# foundry

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml  docker-publish.yml  docker-server.yml  release.yml  test-isolate.yml
crates/cli/: Cargo.toml
crates/cli/src/utils/: cmd.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/evm/core/src/: utils.rs
crates/evm/traces/src/decoder/: mod.rs
crates/forge/: build.rs
crates/forge/src/: runner.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/cmd/: chain.rs  mod.rs  run.rs
