[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.6.0"

anvil = { path = "../crates/anvil" }
cast = { path = "../crates/cast" }
chisel = { path = "../crates/chisel" }
forge = { path = "../crates/forge" }


foundry-block-explorers.workspace = true
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-config.workspace = true
foundry-evm.workspace = true
foundry-cli.workspace = true
foundry-wallets.workspace = true

alloy-chains.workspace = true
alloy-consensus = { workspace = true, features = ["serde", "kzg"] }
alloy-contract.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["reqwest", "ws", "ipc"] }
alloy-rlp.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-serde.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic", "keystore"] }
alloy-signer.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
chrono.workspace = true
evm-disassembler.workspace = true
eyre.workspace = true
futures.workspace = true
rand.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde.workspace = true
once_cell = "1.8.0"

clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"





[lints]
workspace = true
